# verdandi

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: dd015dde2562_initial_schema.py
tests/: conftest.py  test_alembic.py  test_cache.py  test_clients.py  test_coordination.py  test_db.py  test_embeddings.py  test_llm_integration.py  test_memory_long_term.py  test_memory_working.py  test_metrics.py  test_models.py  test_orchestrator.py  test_research.py  test_retry.py  test_steps_real.py  test_strategies.py
tests/fixtures/: exa_search.json  hn_comments.json  hn_search.json  perplexity_query.json  serper_reddit.json  serper_search.json  tavily_search.json
tests/test_api/: conftest.py  test_actions.py  test_experiments.py  test_reviews.py  test_system.py
verdandi/: __init__.py  cache.py  cli.py  config.py  coordination.py  db.py  engine.py  llm.py  logging.py  metrics.py  notifications.py  orchestrator.py  protocols.py  research.py  retry.py  strategies.py  tasks.py
verdandi/agents/: __init__.py  analytics.py  base.py  deploy.py  discovery.py  distribution.py  domain.py  human_review.py  landing_page.py  monitor.py  mvp.py  research.py  scoring.py
verdandi/api/: app.py  deps.py  middleware.py  schemas.py
verdandi/api/routes/: actions.py  experiments.py  reservations.py  reviews.py  steps.py  system.py
verdandi/clients/: __init__.py  cloudflare.py  emailoctopus.py  exa.py  hn_algolia.py  perplexity.py  porkbun.py  serper.py  tavily.py  umami.py
verdandi/clients/social/: __init__.py  bluesky.py  linkedin.py  reddit.py  twitter.py
verdandi/db/: __init__.py  engine.py  facade.py  orm.py
verdandi/memory/: __init__.py  embeddings.py  long_term.py  working.py
verdandi/models/: __init__.py  base.py  deployment.py  distribution.py  experiment.py  idea.py  landing_page.py  mvp.py  research.py  scoring.py  validation.py
verdandi/orchestrator/: __init__.py  coordination.py  runner.py  scheduler.py
verdandi/steps/: __init__.py  base.py  s0_idea_discovery.py  s10_monitor.py  s1_deep_research.py  s2_scoring.py  s3_mvp_definition.py  s4_landing_page.py  s5_human_review.py  s6_domain_purchase.py  s7_deploy.py  s8_analytics_setup.py  s9_distribution.py
verdandi/templates/: landing_v1.html
